feat: upgrade todo list M365

--- a/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
@@ -13,6 +13,7 @@
         "activeResourcePlugins": [
             "fx-resource-local-debug",
             "fx-resource-frontend-hosting",
+            "fx-resource-identity",
             "fx-resource-function",
             "fx-resource-aad-app-for-teams",
             "fx-resource-appstudio",
@@ -20,5 +21,7 @@
         ]
     },
     "isFromSample": true,
-    "programmingLanguage": "javascript"
+    "programmingLanguage": "javascript",
+    "defaultFunctionName": "getUserProfile",
+    "version": "2.0.0"
 }
