--- a/todo-list-with-Azure-backend-M365/templates/appPackage/manifest.local.template.json
+++ b/todo-list-with-Azure-backend-M365/templates/appPackage/manifest.local.template.json
@@ -2,21 +2,21 @@
     "$schema": "https://raw.githubusercontent.com/OfficeDev/microsoft-teams-app-schema/preview/DevPreview/MicrosoftTeams.schema.json",
     "manifestVersion": "m365DevPreview",
     "version": "1.0.0",
-    "id": "{appid}",
+    "id": "{{localSettings.teamsApp.teamsAppId}}",
     "packageName": "com.microsoft.teams.extension",
     "developer": {
         "name": "Teams App, Inc.",
-        "websiteUrl": "{baseUrl}",
-        "privacyUrl": "{baseUrl}/index.html#/privacy",
-        "termsOfUseUrl": "{baseUrl}/index.html#/termsofuse"
+        "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}",
+        "privacyUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/privacy",
+        "termsOfUseUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/termsofuse"
     },
     "icons": {
-        "color": "color.png",
-        "outline": "outline.png"
+        "color": "resources/color.png",
+        "outline": "resources/outline.png"
     },
     "name": {
-        "short": "toDoList",
-        "full": "toDoList"
+        "short": "toDoList-local-debug",
+        "full": "toDoList-local-debug"
     },
     "description": {
         "short": "toDoList",
@@ -29,8 +29,8 @@
         {
             "entityId": "index",
             "name": "Personal Tab",
-            "contentUrl": "{baseUrl}/index.html#/tab",
-            "websiteUrl": "{baseUrl}/index.html#/tab",
+            "contentUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/tab",
+            "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/tab",
             "scopes": [
                 "personal"
             ]
@@ -42,7 +42,7 @@
     ],
     "validDomains": [],
     "webApplicationInfo": {
-        "id": "{appClientId}",
-        "resource": "{webApplicationInfoResource}"
+        "id": "{{localSettings.auth.clientId}}",
+        "resource": "{{{localSettings.auth.applicationIdUris}}}"
     }
 }
