chore: update description

--- a/hello-world-tab-with-backend/templates/appPackage/manifest.remote.template.json
+++ b/hello-world-tab-with-backend/templates/appPackage/manifest.remote.template.json
@@ -19,8 +19,8 @@
         "full": "{{config.manifest.appName.full}}"
     },
     "description": {
-        "short": "Short description of {{config.manifest.appName.short}}",
-        "full": "Full description of {{config.manifest.appName.short}}"
+        "short": "Hello World app of Microsoft Teams Tab app.",
+        "full": "This is a Hello World app of Microsoft Teams Tab app which accomplishes very simple function like single-sign on. You can run this app locally or deploy it to Microsoft Azure. This app has a Tab frontend and a backend service using Azure Function."
     },
     "accentColor": "#FFFFFF",
     "bots": [],
