--- a/todo-list-with-Azure-backend/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend/.fx/configs/projectSettings.json
@@ -12,14 +12,18 @@
             "function"
         ],
         "activeResourcePlugins": [
-            "fx-resource-local-debug",
             "fx-resource-frontend-hosting",
-            "fx-resource-azure-sql",
             "fx-resource-identity",
-            "fx-resource-function",
+            "fx-resource-azure-sql",
             "fx-resource-aad-app-for-teams",
+            "fx-resource-function",
+            "fx-resource-local-debug",
+            "fx-resource-appstudio",
             "fx-resource-simple-auth"
         ]
     },
-    "isFromSample": true
+    "isFromSample": true,
+    "programmingLanguage": "javascript",
+    "defaultFunctionName": "getUserProfile",
+    "version": "2.0.0"
 }
