fix: set isFromSample to be true

--- a/hello-world-bot/.fx/configs/projectSettings.json
+++ b/hello-world-bot/.fx/configs/projectSettings.json
@@ -1,6 +1,5 @@
 {
     "appName": "HelloWorldBot",
-    "projectId": "",
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
@@ -17,6 +16,6 @@
         ]
     },
     "version": "2.0.0",
-    "isFromSample": false,
+    "isFromSample": true,
     "programmingLanguage": "typescript"
 }
