--- a/hello-world-tab-with-backend/.fx/configs/projectSettings.json
+++ b/hello-world-tab-with-backend/.fx/configs/projectSettings.json
@@ -1,6 +1,5 @@
 {
     "appName": "Hello_World_Tab_with_Backend",
-    "projectId": "952c1cd0-c7cf-426d-bbdc-4b4842a9a19f",
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
@@ -22,7 +21,7 @@
         ]
     },
     "version": "2.0.0",
-    "isFromSample": false,
+    "isFromSample": true,
     "programmingLanguage": "typescript",
     "defaultFunctionName": "getUserProfile"
 }
