--- a/hello-world-tab/.fx/configs/projectSettings.json
+++ b/hello-world-tab/.fx/configs/projectSettings.json
@@ -18,6 +18,6 @@
         ]
     },
     "version": "2.0.0",
-    "isFromSample": false,
+    "isFromSample": true,
     "programmingLanguage": "typescript"
 }
