--- a/graph-toolkit-contact-exporter/.fx/configs/projectSettings.json
+++ b/graph-toolkit-contact-exporter/.fx/configs/projectSettings.json
@@ -19,5 +19,6 @@
     },
     "version": "2.0.0",
     "isFromSample": true,
-    "programmingLanguage": "javascript"
+    "programmingLanguage": "javascript",
+    "projectId": "94c7ac0f-aa58-426c-859a-1b0760bcf50d"
 }
