--- a/faq-plus/.fx/configs/projectSettings.json
+++ b/faq-plus/.fx/configs/projectSettings.json
@@ -8,10 +8,13 @@
             "Bot"
         ],
         "activeResourcePlugins": [
-            "fx-resource-local-debug",
-            "fx-resource-bot",
-            "fx-resource-aad-app-for-teams"
-        ]
+          "fx-resource-identity",
+          "fx-resource-bot",
+          "fx-resource-aad-app-for-teams",
+          "fx-resource-local-debug",
+          "fx-resource-appstudio"
+      ],
+      "azureResources": []
     },
     "isFromSample": true,
     "programmingLanguage": "typescript",
