perf: update bicep

--- a/hello-world-bot/.fx/configs/projectSettings.json
+++ b/hello-world-bot/.fx/configs/projectSettings.json
@@ -9,6 +9,7 @@
             "Bot"
         ],
         "activeResourcePlugins": [
+            "fx-resource-identity",
             "fx-resource-bot",
             "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
