--- a/hello-world-tab-with-backend/tabs/package.json
+++ b/hello-world-tab-with-backend/tabs/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
         "@microsoft/teams-js": "^1.9.0",
-        "@microsoft/teamsfx": "0.3.2-alpha.f892d1ab.0",
+        "@microsoft/teamsfx": "^0.3.1",
         "axios": "^0.21.1",
         "classnames": "^2.3.1",
         "msteams-react-base-component": "^3.1.0",
