chore: integrate service principal with ciced

--- a/todo-list-with-Azure-backend/.github/workflows/provision.yml
+++ b/todo-list-with-Azure-backend/.github/workflows/provision.yml
@@ -10,20 +10,22 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     # environment: test_environment
     env:
-      AZURE_ACCOUNT_NAME: ${{secrets.AZURE_ACCOUNT_NAME}}
-      AZURE_ACCOUNT_PASSWORD: ${{secrets.AZURE_ACCOUNT_PASSWORD}}
       AZURE_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-      AZURE_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-      M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
-      M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
 
-      # The following line is to enable insider preview features.
-      TEAMSFX_INSIDER_PREVIEW: true
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: dev
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
+
+      - name: Login Azure by service principal 
+        uses: OfficeDev/teamsfx-cli-action@v1
+        with:
+          commands: account login azure 
+          service-principal: true
+          username: ${{secrets.AZURE_SERVICE_PRINCIPAL_NAME}}
+          password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
+          tenant: ${{secrets.AZURE_TENANT_ID}}
 
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit necessary files into the repository which is automated in this workflow.
