--- a/todo-list-with-Azure-backend/.github/workflows/cd.yml
+++ b/todo-list-with-Azure-backend/.github/workflows/cd.yml
@@ -13,15 +13,8 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     # environment: test_environment
     env:
-      AZURE_ACCOUNT_NAME: ${{secrets.AZURE_ACCOUNT_NAME}}
-      AZURE_ACCOUNT_PASSWORD: ${{secrets.AZURE_ACCOUNT_PASSWORD}}
       AZURE_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-      AZURE_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-      M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
-      M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
 
-      # The following line is to enable insider preview features.
-      TEAMSFX_INSIDER_PREVIEW: true
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: dev
     steps:
@@ -46,6 +39,15 @@ jobs:
       # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
       - name: Run Unit Test
         run: echo "Run your unit test" 
+
+      - name: Login Azure by service principal 
+        uses: OfficeDev/teamsfx-cli-action@v1
+        with:
+          commands: account login azure 
+          service-principal: true
+          username: ${{secrets.AZURE_SERVICE_PRINCIPAL_NAME}}
+          password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
+          tenant: ${{secrets.AZURE_TENANT_ID}}
 
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit .fx/env.default.json into the repository.
@@ -99,9 +101,3 @@ jobs:
         with:
           name: appPackage
           path: build/appPackage/appPackage.${{env.TEAMSFX_ENV_NAME}}.zip
-
-      - name: Publish Teams App
-        uses: OfficeDev/teamsfx-cli-action@v1
-        with:
-          commands: publish
-          env: ${{env.TEAMSFX_ENV_NAME}} 
