--- a/todo-list-with-Azure-backend/.github/workflows/provision.yml
+++ b/todo-list-with-Azure-backend/.github/workflows/provision.yml
@@ -10,6 +10,8 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     # environment: test_environment
     env:
+      M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
+      M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: dev
     steps:
