--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -12,7 +12,7 @@
         {
             "label": "dependency check",
             "type": "shell",
-            "command": "echo ${command:fx-extension.validate-dependencies}"
+            "command": "exit ${command:fx-extension.validate-dependencies}"
         },
         {
             "label": "prepare dev env",
@@ -26,7 +26,7 @@
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "echo ${command:fx-extension.pre-debug-check}"
+            "command": "exit ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "Start Frontend",
@@ -55,7 +55,7 @@
         {
             "label": "backend extensions install",
             "type": "shell",
-            "command": "echo ${command:fx-extension.backend-extensions-install}"
+            "command": "exit ${command:fx-extension.backend-extensions-install}"
         },
         {
             "label": "backend npm install",
