--- a/share-now/.vscode/settings.json
+++ b/share-now/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "azureFunctions.stopFuncTaskPostDebug": false,
     "azureFunctions.showProjectWarning": false,
-    "csharp.suppressDotnetRestoreNotification": true
+    "csharp.suppressDotnetRestoreNotification": true,
+    "debug.onTaskErrors": "abort",
 }
