--- a/todo-list-with-Azure-backend-M365/.vscode/settings.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "azureFunctions.stopFuncTaskPostDebug": false,
     "azureFunctions.showProjectWarning": false,
-    "csharp.suppressDotnetRestoreNotification": true
+    "csharp.suppressDotnetRestoreNotification": true,
+    "debug.onTaskErrors": "abort",
 }
