--- a/todo-list-with-Azure-backend/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend/.vscode/tasks.json
@@ -20,7 +20,7 @@
         {
             "label": "dependency check",
             "type": "shell",
-            "command": "echo ${command:fx-extension.validate-dependencies}"
+            "command": "exit ${command:fx-extension.validate-dependencies}"
         },
         {
             "label": "prepare dev env",
@@ -34,7 +34,7 @@
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "echo ${command:fx-extension.pre-debug-check}"
+            "command": "exit ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "frontend npm install",
@@ -63,7 +63,7 @@
         {
             "label": "backend extensions install",
             "type": "shell",
-            "command": "echo ${command:fx-extension.backend-extensions-install}"
+            "command": "exit ${command:fx-extension.backend-extensions-install}"
         }
     ]
 }
