Revert "fix: update tasks/settings.json to support removing debug anyway (#224)"
This reverts commit c6e5f6dfd26f6dca4a5c246a6d3bdad5ab7edbca.

--- a/NPM-search-connector-M365/.vscode/tasks.json
+++ b/NPM-search-connector-M365/.vscode/tasks.json
@@ -13,7 +13,7 @@
         {
             "label": "dependency check",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-dependencies}"
+            "command": "echo ${command:fx-extension.validate-dependencies}"
         },
         {
             "label": "start ngrok",
@@ -34,7 +34,7 @@
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}"
+            "command": "echo ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "Start Bot",
