--- a/faq-plus/.vscode/tasks.json
+++ b/faq-plus/.vscode/tasks.json
@@ -17,7 +17,7 @@
         {
             "label": "dependency check",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-dependencies}"
+            "command": "echo ${command:fx-extension.validate-dependencies}"
         },
         {
             "label": "start ngrok",
@@ -50,7 +50,7 @@
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}"
+            "command": "echo ${command:fx-extension.pre-debug-check}"
         }
     ]
 }
