--- a/hello-world-bot/.vscode/tasks.json
+++ b/hello-world-bot/.vscode/tasks.json
@@ -13,7 +13,7 @@
         {
             "label": "dependency check",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-dependencies}"
+            "command": "echo ${command:fx-extension.validate-dependencies}"
         },
         {
             "label": "start ngrok",
@@ -34,7 +34,7 @@
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}"
+            "command": "echo ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "Start Bot",
