--- a/share-now/.vscode/tasks.json
+++ b/share-now/.vscode/tasks.json
@@ -25,7 +25,7 @@
         {
             "label": "dependency check",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-dependencies}"
+            "command": "echo ${command:fx-extension.validate-dependencies}"
         },
         {
             "label": "start ngrok",
@@ -56,7 +56,7 @@
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}"
+            "command": "echo ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "frontend npm install",
@@ -89,7 +89,7 @@
         {
             "label": "backend extensions install",
             "type": "shell",
-            "command": "exit ${command:fx-extension.backend-extensions-install}"
+            "command": "echo ${command:fx-extension.backend-extensions-install}"
         }
     ]
 }
