--- a/graph-toolkit-contact-exporter/.vscode/tasks.json
+++ b/graph-toolkit-contact-exporter/.vscode/tasks.json
@@ -38,7 +38,7 @@
         {
             "label": "frontend npm install",
             "type": "shell",
-            "command": "npm install",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/tabs"
             }
