--- a/share-now/.vscode/tasks.json
+++ b/share-now/.vscode/tasks.json
@@ -48,7 +48,7 @@
         {
             "label": "bot npm install",
             "type": "shell",
-            "command": "npm install",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/bot"
             }
@@ -61,7 +61,7 @@
         {
             "label": "frontend npm install",
             "type": "shell",
-            "command": "npm install",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/tabs"
             }
@@ -77,7 +77,7 @@
         {
             "label": "backend npm install",
             "type": "shell",
-            "command": "npm install",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/api"
             },
