--- a/faq-plus/.vscode/tasks.json
+++ b/faq-plus/.vscode/tasks.json
@@ -42,7 +42,7 @@
         {
             "label": "bot npm install",
             "type": "shell",
-            "command": "npm install",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/bot"
             }
