--- a/hello-world-bot/.vscode/tasks.json
+++ b/hello-world-bot/.vscode/tasks.json
@@ -43,7 +43,7 @@
         {
             "label": "bot npm install",
             "type": "shell",
-            "command": "npm install",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/bot"
             }
