fix: spfx sample app local debug concurrency error

--- a/todo-list-SPFx/.vscode/tasks.json
+++ b/todo-list-SPFx/.vscode/tasks.json
@@ -71,7 +71,7 @@
                 "prepare local environment",
                 "gulp serve"
             ],
-            "dependsOrder": "parallel"
+            "dependsOrder": "sequence"
         },
         {
             "label": "Terminate All Tasks",
