--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@fluentui/react-northstar": "^0.51.0",
-    "@microsoft/mgt": "^2.3.0",
-    "@microsoft/mgt-components": "^2.3.0",
-    "@microsoft/mgt-react": "^2.3.0",
     "@microsoft/teams-js": "^1.6.0",
-    "@microsoft/teamsfx": "^0.2.1",
+    "@microsoft/mgt-react": "2.3.2-next.teamsfx.54e0d43",
+    "@microsoft/mgt-element": "2.3.2-next.teamsfx.54e0d43",
+    "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.54e0d43",
+    "@microsoft/teamsfx": "^0.4.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-csv": "^2.0.3",
