--- a/todo-list-with-Azure-backend/.github/workflows/cd.yml
+++ b/todo-list-with-Azure-backend/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  buildAndPublish:
+  buildAndDeploy:
     runs-on: ubuntu-latest
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     # environment: test_environment
