--- a/bot-sso/.gitignore
+++ b/bot-sso/.gitignore
@@ -1,4 +1,8 @@
 node_modules
-.backup
+.fx/configs/localSettings.json
+.fx/states/*.userdata
 .DS_Store
-.fx
+.archive
+.archive.log
+.env.teamsfx.local
+subscriptionInfo.json
