perf(errorhandling): error message suggests vscode version not match

--- a/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
@@ -16,12 +16,12 @@
             "fx-resource-aad-app-for-teams",
             "fx-resource-function",
             "fx-resource-local-debug",
-            "fx-resource-appstudio"
+            "fx-resource-appstudio",
+            "fx-resource-simple-auth"
         ]
     },
     "isFromSample": true,
     "programmingLanguage": "javascript",
     "defaultFunctionName": "getUserProfile",
     "version": "2.0.0",
-    "projectId": "cb8960fd-7860-4a04-ab51-b605517e6c8c"
 }
