--- a/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
@@ -23,5 +23,5 @@
     "isFromSample": true,
     "programmingLanguage": "javascript",
     "defaultFunctionName": "getUserProfile",
-    "version": "2.0.0",
+    "version": "2.0.0"
 }
