--- a/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
@@ -16,8 +16,7 @@
             "fx-resource-aad-app-for-teams",
             "fx-resource-function",
             "fx-resource-local-debug",
-            "fx-resource-appstudio",
-            "fx-resource-simple-auth"
+            "fx-resource-appstudio"
         ]
     },
     "isFromSample": true,
