--- a/graph-toolkit-contact-exporter/.fx/configs/projectSettings.json
+++ b/graph-toolkit-contact-exporter/.fx/configs/projectSettings.json
@@ -13,11 +13,11 @@
             "fx-resource-identity",
             "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
-            "fx-resource-appstudio",
-            "fx-resource-simple-auth"
+            "fx-resource-appstudio"
         ]
     },
-    "version": "2.0.0",
+    "version": "2.1.0",
     "isFromSample": true,
-    "programmingLanguage": "javascript"
+    "programmingLanguage": "javascript",
+    "projectId": "b47a5356-6681-489e-a17f-646c520856af"
 }
