--- a/graph-toolkit-contact-exporter/.vscode/tasks.json
+++ b/graph-toolkit-contact-exporter/.vscode/tasks.json
@@ -30,8 +30,7 @@
         {
             "label": "Start Frontend",
             "dependsOn": [
-                "teamsfx: frontend start",
-                "teamsfx: auth start"
+                "teamsfx: frontend start"
             ],
             "dependsOrder": "parallel"
         },
