--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -7,8 +7,8 @@
     "@microsoft/teams-js": "^1.6.0",
     "@microsoft/mgt-react": "2.3.2-next.teamsfx.54e0d43",
     "@microsoft/mgt-element": "2.3.2-next.teamsfx.54e0d43",
-    "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.54e0d43",
-    "@microsoft/teamsfx": "^0.4.0",
+    "@microsoft/mgt-teamsfx-provider": "../../../microsoft-graph-toolkit/packages/providers/mgt-teamsfx-provider/microsoft-mgt-teamsfx-provider-2.1.0.tgz",
+    "@microsoft/teamsfx": "^0.5.0-rc.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-csv": "^2.0.3",
