--- a/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
@@ -11,13 +11,12 @@
             "function"
         ],
         "activeResourcePlugins": [
-            "fx-resource-local-debug",
             "fx-resource-frontend-hosting",
             "fx-resource-identity",
-            "fx-resource-function",
             "fx-resource-aad-app-for-teams",
-            "fx-resource-appstudio",
-            "fx-resource-simple-auth"
+            "fx-resource-function",
+            "fx-resource-local-debug",
+            "fx-resource-appstudio"
         ]
     },
     "isFromSample": true,
