fix: remove auth start tasks

--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -12,8 +12,7 @@
         {
             "label": "Start Frontend",
             "dependsOn": [
-                "teamsfx: frontend start",
-                "teamsfx: auth start"
+                "teamsfx: frontend start"
             ],
             "dependsOrder": "parallel"
         },
