style: remove comma

--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -31,7 +31,7 @@
         {
             "label": "Start Frontend",
             "dependsOn": [
-                "teamsfx: frontend start",
+                "teamsfx: frontend start"
             ],
             "dependsOrder": "parallel"
         },
