--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -31,8 +31,7 @@
         {
             "label": "Start Frontend",
             "dependsOn": [
-                "teamsfx: frontend start",
-                "teamsfx: auth start"
+                "teamsfx: frontend start"
             ],
             "dependsOrder": "parallel"
         },
