--- a/hello-world-tab-with-backend/api/package.json
+++ b/hello-world-tab-with-backend/api/package.json
@@ -10,7 +10,7 @@
     "dependencies": {
         "@azure/functions": "^1.2.2",
         "@microsoft/microsoft-graph-client": "^3.0.1",
-        "@microsoft/teamsfx": "^0.5.0",
+        "@microsoft/teamsfx": "^0.5.0-rc",
         "isomorphic-fetch": "^3.0.0"
     },
     "devDependencies": {
