fix: remove project id

--- a/graph-toolkit-contact-exporter/.fx/configs/projectSettings.json
+++ b/graph-toolkit-contact-exporter/.fx/configs/projectSettings.json
@@ -18,6 +18,5 @@
     },
     "version": "2.1.0",
     "isFromSample": true,
-    "programmingLanguage": "javascript",
-    "projectId": "b47a5356-6681-489e-a17f-646c520856af"
+    "programmingLanguage": "javascript"
 }
