--- a/faq-plus/.vscode/tasks.json
+++ b/faq-plus/.vscode/tasks.json
@@ -4,53 +4,41 @@
         {
             "label": "Pre Debug Check",
             "dependsOn": [
-                "dependency check",
+                "validate local prerequisites",
                 "start ngrok",
-                "prepare dev env"
+                "prepare local environment"
             ],
             "dependsOrder": "sequence"
         },
         {
-            "label": "Start Bot",
-            "dependsOn": "teamsfx: bot start"
-        },
-        {
-            "label": "dependency check",
+            "label": "validate local prerequisites",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-dependencies}"
+            "command": "exit ${command:fx-extension.validate-local-prerequisites}",
+            "presentation": {
+                "reveal": "never"
+            }
         },
         {
             "label": "start ngrok",
-            "type": "teamsfx",
-            "command": "ngrok start",
-            "isBackground": true,
-            "presentation": {
-                "panel": "new"
-            },
-            "dependsOn": [
-                "bot npm install"
-            ]
-        },
-        {
-            "label": "prepare dev env",
-            "dependsOn": [
-                "prepare local environment",
-                "bot npm install"
-            ],
-            "dependsOrder": "parallel"
-        },
-        {
-            "label": "bot npm install",
-            "type": "shell",
-            "command": "npm install --no-audit",
-            "options": {
-                "cwd": "${workspaceFolder}/bot"
-            }
+            "dependsOn": "teamsfx: ngrok start"
         },
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}"
+            "command": "exit ${command:fx-extension.pre-debug-check}",
+            "presentation": {
+                "reveal": "never"
+            }
+        },
+        {
+            "label": "Start Bot",
+            "type": "shell",
+            "command": "npm run dev:teamsfx",
+            "isBackground": true,
+            "problemMatcher": "$teamsfx-bot-watch",
+            "options": {
+                "cwd": "${workspaceFolder}/bot"
+            }
         }
     ]
 }
