--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "main": "./lib/index.js",
     "scripts": {
+        "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
+        "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
         "build": "tsc --build",
         "start": "node ./lib/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,6 +29,7 @@
     "devDependencies": {
         "@types/restify": "8.4.2",
         "@types/tedious": "^4.0.3",
+        "env-cmd": "^10.1.0",
         "nodemon": "^2.0.7",
         "ts-node": "~9.1.1",
         "typescript": "~3.9.2"
