--- a/todo-list-with-Azure-backend-M365/api/package.json
+++ b/todo-list-with-Azure-backend-M365/api/package.json
@@ -11,5 +11,8 @@
     "@microsoft/teamsfx": "^0.5.0",
     "isomorphic-fetch": "^3.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
