chore(share-now): add uri for website

--- a/share-now/templates/appPackage/manifest.local.template.json
+++ b/share-now/templates/appPackage/manifest.local.template.json
@@ -6,7 +6,7 @@
     "packageName": "com.microsoft.teams.extension",
     "developer": {
         "name": "Teams App, Inc.",
-        "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}",
+        "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/website",
         "privacyUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/privacy",
         "termsOfUseUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/termsofuse"
     },
